Modificaciones de la parte java y python para que funcione con android, ademas de algunas nuevas funciones como convertir a xml, guardar metadatos de la biblioteca, etc